[project]
name = "browser-use-needle"
version = "0.1.0"
description = "Needle experiments for Browser Use and browser-use-rust tool calls"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "browser-use",
    "huggingface-hub>=0.23",
    "needle",
    "pydantic>=2",
    "python-dotenv>=1",
]

[project.scripts]
buneedle = "browser_use_needle.cli:main"

[tool.uv.sources]
browser-use = { path = "../browser-use", editable = true }
needle = { git = "https://github.com/cactus-compute/needle.git", rev = "b4a4d5bcd3c24d79a42a82357932b256b6786bc2" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
